# rasteret

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  codemeta.json  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yaml  ci.yml  docs.yml  live-smoke.yml  pypi-stats.yml  pypi-test.yaml  pypi.yaml  traffic-stats.yml
assets/: plots.geojson
changelog/: index.html
contributing/: index.html
docs/: changelog.md  comparison.md  contributing.md  index.md  releasing.md
docs/explanation/: architecture.md  benchmark.md  compatibility-matrix.md  concepts.md  conceptual-roadmap.md  correctness.md  design-decisions.md  index.md  interop.md  schema-contract.md
docs/getting-started/: index.md
docs/how-to/: aef-embeddings.md  build-from-parquet.md  build-from-tables.md  collection-management.md  custom-cloud-provider.md  dataset-catalog.md  enriched-collection-workflows.md  enriched-parquet-workflows.md  index.md  migrating-from-rasterio.md  ml-training-splits.md  multi-dataset-training.md  point-sampling-and-masking.md  torchgeo-integration.md  transitioning-from-rasterio.md  turbocharging-torchgeo.md
docs/overrides/: main.html
docs/reference/: catalog.md  cli.md  cloud.md  index.md  rasteret.md  types.md
docs/tutorials/: 01_quickstart.ipynb  01_quickstart_xarray.ipynb  02_torchgeo_09_accelerator.ipynb  02_using_rasteret_with_torchgeo.ipynb  03_parquet_first_filtering.ipynb  03_work_with_collection_tables.ipynb  04_custom_cloud_and_bands.ipynb  04_custom_datasets_with_rasteret.ipynb  05_torchgeo_benchmark_rasteret_vs_rasterio.ipynb  05_torchgeo_comparison.ipynb  06_build_from_parquet_and_arrow_tables.ipynb  06_non_stac_cog_collections.ipynb  index.md
examples/: README.md  aef_duckdb_query.py  basic_workflow_gdf.py  basic_workflow_xarray.py  basic_workflow_xarray_landsat_paid.py  basic_workflow_xarray_sentinel.py  build_collection_from_parquet.py  collection_management.py  example_xarray_nb.ipynb  landsat_xarray.py  major_tom_on_the_fly_collection.py  ml_training_with_splits.py
examples/major_tom_benchmark/: 01_build_collection.py  01_build_collection_sharded.py  02_run_benchmark_from_cache.py  03_hf_vs_rasteret_benchmark.py  README.md
explanation/: index.html  index.md
explanation/architecture/: index.html  index.md
explanation/benchmark/: index.html  index.md
explanation/concepts/: index.html  index.md
explanation/correctness/: index.html  index.md
explanation/design-decisions/: index.html  index.md
explanation/interop/: index.html  index.md
explanation/schema-contract/: index.html  index.md
fixtures/: NOTICE
getting-started/: index.html  index.md
how-to/: index.html  index.md
how-to/aef-embeddings/: index.html  index.md
how-to/build-from-parquet/: index.html  index.md
how-to/build-from-tables/: index.html  index.md
how-to/collection-management/: index.html  index.md
how-to/custom-cloud-provider/: index.html  index.md
how-to/dataset-catalog/: index.html  index.md
how-to/enriched-collection-workflows/: index.html  index.md
how-to/enriched-parquet-workflows/: index.html  index.md
how-to/migrating-from-rasterio/: index.html  index.md
how-to/ml-training-splits/: index.html  index.md
how-to/multi-dataset-training/: index.html  index.md
how-to/point-sampling-and-masking/: index.html  index.md
how-to/torchgeo-integration/: index.html  index.md
notebooks/: 01_quickstart.ipynb  01_quickstart_xarray.ipynb  02_torchgeo_09_accelerator.ipynb  03_parquet_first_filtering.ipynb  03_work_with_collection_tables.ipynb  04_custom_cloud_and_bands.ipynb  05_torchgeo_benchmark_rasteret_vs_rasterio.ipynb  05_torchgeo_comparison.ipynb  06_non_stac_cog_collections.ipynb  07_aef_similarity_search.ipynb  08_aef_fire_lancedb_torchgeo.ipynb  README.md  utils_stitching.py
overrides/: main.html
reference/: index.html
reference/catalog/: index.html
reference/cli/: index.html
reference/cloud/: index.html
reference/ingest/: index.html  index.md
reference/rasteret/: index.html
reference/types/: index.html
releasing/: index.html
search/: search_index.json
src/rasteret/: __init__.py  catalog.py  cli.py  cloud.py  constants.py  logging.py  options.py  types.py
stylesheets/: extra.css
tutorials/: index.html
tutorials/01_quickstart/: 01_quickstart.ipynb  index.html  index.md
tutorials/02_torchgeo_09_accelerator/: 02_torchgeo_09_accelerator.ipynb  index.html  index.md
tutorials/02_using_rasteret_with_torchgeo/: 02_using_rasteret_with_torchgeo.ipynb  index.html  index.md
tutorials/03_parquet_first_filtering/: 03_parquet_first_filtering.ipynb  index.html  index.md
tutorials/03_work_with_collection_tables/: 03_work_with_collection_tables.ipynb  index.html  index.md
tutorials/04_custom_cloud_and_bands/: 04_custom_cloud_and_bands.ipynb  index.html  index.md
tutorials/04_custom_datasets_with_rasteret/: 04_custom_datasets_with_rasteret.ipynb  index.html  index.md
tutorials/05_torchgeo_benchmark_rasteret_vs_rasterio/: index.md  (+1 more)
(+100 files in other folders)
